fix variable names containing hyphen symbol as it is not supported in config parsing function

--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -16,11 +16,11 @@ SAMTOOLS_INDEXES=samtools
 bcftools=bcftools
 bgzip=bgzip
 bwa=bwa
-khmer_interleave-reads=interleave-reads.py
-khmer_load-into-counting=load-into-counting.py
-khmer_filter-abund=filter-abund.py
-khmer_extract-paired-reads=extract-paired-reads.py
-khmer_split-paired-reads=split-paired-reads.py
+khmer_interleave_reads=interleave-reads.py
+khmer_load_into_counting=load-into-counting.py
+khmer_filter_abund=filter-abund.py
+khmer_extract_paired_reads=extract-paired-reads.py
+khmer_split_paired_reads=split-paired-reads.py
 metavelvetg=/usr/local/src/MetaVelvet-1.2.02-151/meta-velvetg
 nucmer=nucmer
 samtools=samtools
@@ -32,14 +32,14 @@ velvetg=/usr/local/src/velvet_1.2.10/velvetg
 [genome_alias]
 # reference genome without chromosome 2 (where mt is inserted) 
 ref=Ath-Col0-tair10-WG-sans2
-ref_short=Col-sans2
+ref_short=Col0-sans2
 
-[load-into-counting.py]
+[khmer_load_into_counting]
 k=71
 x=1e9
 T=2
 
-[filter-abund.py]
+[khmer_filter_abund]
 C=
 
 [bwa_aln]
