add sample section with default values

--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -34,6 +34,13 @@ velvetg=/usr/local/src/velvet_1.2.10/velvetg
 ref=Ath-Col0-tair10-WG-sans2
 ref_short=Col0-sans2
 
+[sample]
+name_alias=cvi
+seqfile_parent_dir=/projects/Mitochondrie/Cytopheno/mutdetect_xa/map_and_report_multiple_hits_update/LIB4751_Cvi-0-extr2/LIB4751_vs_A
+th-Col0-tair10-WG/2IE/01_Trimming
+seqfile_R1=LIB4751_vs_Ath-Col0-tair10-WG_2IE_1_paired.fq
+seqfile_R2=LIB4751_vs_Ath-Col0-tair10-WG_2IE_2_paired.fq
+
 [khmer_load_into_counting]
 k=71
 x=1e9
