update contiging and scaffolding config sections, including corresponding assembly tools

--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -49,6 +49,36 @@ T=2
 [khmer_filter_abund]
 C=28
 
+[contig_assembler]
+name=meta-velvetg
+hash_length=71
+
+[scaffolder]
+name=meta-velvetg
+scaffolding=yes
+
+[velveth]
+#file_format
+fastq=TRUE
+#read_type
+shortPaired=TRUE
+
+[velvetg]
+ins_length=440
+exp_cov=auto
+scaffolding=no
+
+[meta_velvetg]
+# peak detection options
+exp_cov=558_58
+# contiging options
+cov_cutoff=5
+# scaffolding options
+ins_length=440
+scaffolding=no
+# output options
+amos_file= yes
+
 [bwa_aln]
 t=2
 n=2
