fix metavelvet expected coverage option

--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -70,7 +70,7 @@ scaffolding=no
 
 [meta_velvetg]
 # peak detection options
-exp_cov=558_58
+exp_covs=558_58
 # contiging options
 cov_cutoff=5
 # scaffolding options
