update hash table size and decrease multithreading value to fix a bug in load-into-counting.py (khmer 1.1)

--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -42,9 +42,10 @@ seqfile_R1=LIB4751_vs_Ath-Col0-tair10-WG_2IE_1_paired.fq
 seqfile_R2=LIB4751_vs_Ath-Col0-tair10-WG_2IE_2_paired.fq
 
 [khmer_load_into_counting]
-k=71
-x=1e9
-T=2
+k=20
+x=4e9
+# do not increase T value: multi-threading is bugged in khmer 1.1. Increase this value will trigger khmer to not recognize fast[aq] format although it is well-formated.
+T=1
 
 [khmer_filter_abund]
 C=28
