update velveth options: file format and read type options are not supported

--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -58,10 +58,9 @@ name=meta-velvetg
 scaffolding=yes
 
 [velveth]
-#file_format
-fastq=TRUE
-#read_type
-shortPaired=TRUE
+# file_format only supported: fastq
+# read_type only supported: shortPaired
+# place only velveth options are supported not the other file format and read type options
 
 [velvetg]
 ins_length=440
