--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -25,8 +25,8 @@ metavelvetg=/usr/local/src/MetaVelvet-1.2.02-151/meta-velvetg
 nucmer=nucmer
 samtools=samtools
 tabix=tabix
-velveth=/usr/local/src/velvet_1.2.10/velveth
-velvetg=/usr/local/src/velvet_1.2.10/velvetg
+velveth=/usr/local/src/velvet_1.2.10-151/velveth
+velvetg=/usr/local/src/velvet_1.2.10-151/velvetg
 # Add all dependencies paths here
 
 [genome_alias]
