comment meta-velvetg scaffolding=no option : run by default, option not considered by the pipeline

--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -74,7 +74,7 @@ exp_covs=558_58
 cov_cutoff=5
 # scaffolding options
 ins_length=440
-scaffolding=no
+#scaffolding=no # by default, the pipeline always run the contiging step first (no scaffolding). Use the scaffolder scaffolding swith to enable scaffolding
 # output options
 amos_file= yes
 
