update genome alias list with mitochondria and chloroplast with corresponding genes gff filenames

--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -33,6 +33,10 @@ velvetg=/usr/local/src/velvet_1.2.10-151/velvetg
 # reference genome without chromosome 2 (where mt is inserted) 
 ref=Ath-Col0-tair10-WG-sans2
 ref_short=Col0-sans2
+ref_mito=Ath-Col0-tair10-chrM
+ref_chloro=Ath-Col0-tair10-chrC
+ref_mito_gff=Ath-Col0-tair10-chrM_genes.gff
+ref_chloro_gff=Ath-Col0-tair10-chrC_genes.gff
 
 [sample]
 name_alias=cvi
