add quast config path and options

--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -27,6 +27,7 @@ samtools=samtools
 tabix=tabix
 velveth=/usr/local/src/velvet_1.2.10-151/velveth
 velvetg=/usr/local/src/velvet_1.2.10-151/velvetg
+quast=/usr/local/src/quast-2.3/quast.py
 # Add all dependencies paths here
 
 [genome_alias]
@@ -81,6 +82,11 @@ ins_length=440
 #scaffolding=no # by default, the pipeline always run the contiging step first (no scaffolding). Use the scaffolder scaffolding swith to enable scaffolding
 # output options
 amos_file= yes
+
+[quast]
+T=12
+M=150
+debug=TRUE
 
 [bwa_aln]
 t=2
