update default config file: add back metavelvet scaffolding option with value no

--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -80,6 +80,7 @@ cov_cutoff=5
 # scaffolding options
 ins_length=440
 #scaffolding=no # by default, the pipeline always run the contiging step first (no scaffolding). Use the scaffolder scaffolding swith to enable scaffolding
+scaffolding=no
 # output options
 amos_file= yes
 
