--- a/share/mitology-pipeline/etc/mitology-pipeline_user.config
+++ b/share/mitology-pipeline/etc/mitology-pipeline_user.config
@@ -2,11 +2,12 @@
 # MITOLOGY PIPELINE USER CONFIG FILE 
 #
 
-# Authors: Joseph Tran <Joseph.Tran@versailles.inra.fr>
+# author: Joseph Tran <Joseph.Tran@versailles.inra.fr>
+# license: GPL >= v3 (see mitology-pipeline/LICENSE)
 
 # Date: 2014-09-25
 
-# VERSION=0.0.1
+# VERSION=RC1
 
 [paths]
 GENOMES_BASE_PATH=/data/SEQUENCES/GENOME
